# goit-de-hw-05

./: .gitignore  README.md  Screenshots.docx  pyproject.toml
