[project]
name = "goit-de-hw-05"
version = "0.1.0"
description = ""
authors = [
    {name = "Maryna Kindras",email = "140345218+MarynaKindras@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "confluent-kafka (>=2.12.2,<3.0.0)"
]

[tool.poetry]
# Додано секцію [tool.poetry] для налаштування Poetry
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"